# pubmed-affiliation-finder

./: .gitignore  cli.py  main_cli.py  pyproject.toml  readme.md  requirements.txt
pubmed_affiliation_finder/: __init__.py  affiliation_checker.py  cli.py  exporter.py  fetcher.py  parser.py  utils.py
tests/: __init__.py  test_checker.py  test_fetcher.py  test_parser.py
