[project]
name = "pubmed-affiliation-finder"
version = "0.1.7"
description = "Fetch PubMed papers with non-academic authors from pharma/biotech companies."
requires-python = ">=3.9"

authors = [
  { name = "Keerthi Krishna", email = "skeerthi.krish@email.com" }
]

readme = "README.md"
license = { text = "MIT" }
keywords = ["pubmed", "biotech", "pharma", "non-academic", "LLM", "affiliation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "requests>=2.31",
  "typer[all]>=0.9",
  "pandas>=2.2",
  "python-dotenv>=1.0",
  "google-generativeai>=0.3.2",
  "uritemplate>=4.2.0,<5.0.0"
]

[tool.poetry.scripts]
get-papers-list = "pubmed_affiliation_finder.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
